# cot_unfaithfulness_replication

./: .env.example  .gitignore  README.md  _quarto.yml  analysis.qmd  index.qmd  pyproject.toml  references.bib  run_experiments.py
logs/full_experiments/: README.md
logs/pr_submission/: README.md
